--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@tabler/icons-react": "^3.33.0",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +19,7 @@
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
   },
